trying to give "gradle test" more memory